# Tizen-OP

./: Dockerfile  EmscriptenConfig.cmake  README.md  build_and_run.sh
moont/: CMakeLists.txt
moont/src/: example.c  main.cpp
